# pipower3

./: README.md  install.py  pyproject.toml
docs/source/: assembly_instructions.rst  battery.rst  compatible_sbc.rst  compitable_sbc.rst  conf.py  fan.rst  hardware_introduction.rst  index.rst  quick_user_guide.rst  use_with_arduino.rst  use_with_pico_esp32.rst  use_with_rpi.rst
docs/source/_static/pdf/: Register Table.docx
examples/: read_all.py  read_individual.py
pipower3/: __init__.py  config.json  pipower3.py  shutdown_service.py
tools/: sf_installer.py
