[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pipower3"
authors = [
  { name="SunFounder", email="service@sunfounder.com" },
]
description = "Library for PiPower 3"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = []

[project.scripts]
pipower3-service = "pipower3:main"

[tool.setuptools]
packages = ["pipower3"]

[project.urls]
"Homepage" = "https://github.com/sunfounder/pipower3"
"Bug Tracker" = "https://github.com/sunfounder/pipower3/issues"

[tool.setuptools.dynamic]
version = {attr = "pipower3.__version__"}